--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.394.0",
+    "mongoose": "^8.4.1",
     "nuxt": "^3.12.1",
     "radix-vue": "^1.8.3",
     "reusify": "^1.0.4",
